# grey_wolf_optimizer

./: .gitignore  00_guiding_points.txt  01_following_points.txt  1000_points.txt  100_points.txt  CMakeLists.txt  README.md  benchmark_functions.cpp  benchmark_functions.h  grey_wolf_optimizer.cpp  grey_wolf_optimizer.h  points_visualizer.py  test.cpp  utils.cpp  utils.h  visualizer.py
plot/: 10000_points.txt  10000_points_ackley.txt  10000_points_function3.txt  10000_points_schwefel.txt  a.out  generate_data.cpp  plot.py
